# real-time-air-quality-analytics-pipeline

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
dataset/: info.md
notebooks/: 02_analytics.ipynb  03_visualization.ipynb  analytics.ipynb
schema/: attribute_table.md  curated_air_quality_schema.json
scripts/: init-datanode.sh  load_synthetic_data.py  run_analytics.py  run_producer.py  run_streaming.py  start-hdfs.sh
src/: __init__.py
src/analytics/: Dockerfile  batch_analysis.py  metrics.py  spike_detection.py
src/common/: config.py  env.py  logging.py
src/ingestion/: Dockerfile  aqicn_client.py  producer.py  pyproject.toml
src/reporting/: notebook_helpers.py
src/streaming/: Dockerfile  consumer.py  curation.py  hdfs_client.py  pyproject.toml  streaming_job.py  utils.py
src/synthetic/: generator.py
src/synthetic/examples/curated/: 2026-04-12.jsonl  2026-05-02.jsonl
src/synthetic/examples/raw/: 2026-04-12.jsonl  2026-05-02.jsonl
tests/: conftest.py
tests/analytics/: conftest.py  test_analytics_docker_setup.py  test_batch_analysis.py  test_metrics.py  test_run_analytics.py  test_spike_detection.py
tests/common/: test_config.py  test_env.py  test_logging.py
tests/ingestion/: test_aqicn_client.py  test_producer.py  test_producer_dockerfile.py  test_run_producer.py
tests/streaming/: test_consumer.py  test_curation.py  test_hdfs_client.py  test_run_streaming.py  test_stream_to_hdfs.py  test_utils.py
tests/synthetic/: test_generator.py  test_load_synthetic_data.py
