[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-air-quality-analytics-pipeline"
version = "0.1.0"
description = "Real-time air quality analytics pipeline for Sofia"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.3.0",
    "matplotlib>=3.10.0",
    "pandas>=3.0.2",
    "pyspark>=4.1.1",
    "python-dotenv>=1.1.2",
    "pytest>=9.0.2",
    "requests>=2.33.1",
    "jupyter>=1.1.1",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "coverage>=7.13.5",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
