[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-ingestion"
version = "0.1.0"
description = "Kafka producer for the real-time air quality pipeline"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.3.0",
    "python-dotenv>=1.1.2",
    "requests>=2.33.1",
]

[tool.setuptools.packages.find]
include = ["src*"]
